Weight-painting problems in posemode #1139

Closed
opened 2004-04-09 10:05:08 +02:00 by Chris M · 3 comments

Group: V 2.32 release
Resolution: Fixed
Category: Tools

%%%Someone at Elysiun said it's a known problem (and maybe
someone is already working on it), if so, just ignore
this report. I post it because I couldn't find it
reported in the bugtracker.

Here's how I weight-paint:

  • Parented mesh to skeleton (assign vertices to bones
    automaticly)
  • Go to posemode (ctrl tab)
  • Pose my model
  • exit posemode, select mesh, enter weight-paint mode
  • try to assign weights

Now, sometimes it works and the vertex moves to a new
position and gets a different color, sometimes doesn't
and I can't figure out when it works and when it
doesn't. It seems to me to be at random (but of course
it isn't). But it happens every time, so it is repeatable.

Regards, Chris

windows 2000
Blender 2.32
nvidia geforce 4 ti 4600
videodrivers: 53.03

linux debian unstable
Blender 2.32
nvidia geforce 4 ti 4600
driver: 1.0-5336
%%%

**Group**: V 2.32 release **Resolution**: Fixed **Category**: Tools %%%Someone at Elysiun said it's a known problem (and maybe someone is already working on it), if so, just ignore this report. I post it because I couldn't find it reported in the bugtracker. Here's how I weight-paint: - Parented mesh to skeleton (assign vertices to bones automaticly) - Go to posemode (ctrl tab) - Pose my model - exit posemode, select mesh, enter weight-paint mode - try to assign weights Now, sometimes it works and the vertex moves to a new position and gets a different color, sometimes doesn't and I can't figure out when it works and when it doesn't. It seems to me to be at random (but of course it isn't). But it happens every time, so it is repeatable. Regards, Chris windows 2000 Blender 2.32 nvidia geforce 4 ti 4600 videodrivers: 53.03 linux debian unstable Blender 2.32 nvidia geforce 4 ti 4600 driver: 1.0-5336 %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

This task was automatically closed as archived as part of migration, because the project or tracker this task belonged to is no longer active.

This task was automatically closed as archived as part of migration, because the project or tracker this task belonged to is no longer active.
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#1139
No description provided.