Bug fix 1139

Weight Painting didn't work with (Paint Panel) option "Soft". This due
to a wrong check for normals in displaylists.